# GroupToolBackend

./: .gitignore  Dockerfile  README.md  datasources.py  docker-compose.yml  element_group.py  main.py  models.py  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: docker-build-push.yml
tests/: test_datasources.py  test_element_grouping.py  test_main.http
