[tool.poetry]
name = "newgrouptool"
version = "0.1.0"
description = ""
authors = ["SleepyCelery <chaoyihu@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
requests = "^2.32.3"
loguru = "^0.7.3"
sqlalchemy = "^2.0.36"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

